--- a/README.rdoc
+++ b/README.rdoc
@@ -5,23 +5,16 @@ application up and running.
 
 Things you may want to cover:
 
-* Ruby version
+* Ruby version => 2.5
 
-* System dependencies
+* Database Required => MySQL
 
-* Configuration
+Step 1 Clone the project 
+Step 2 bundle i
+Step 3 rake db:setup
+step 4 Add G mail credentials in the setting.yml
+Step 5 Visit localhost:3000 and use the website.
 
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
 
 
 Please feel free to use a different markup language if you do not plan to run
